--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     <h1 class="title">2023 신년계획</h1>
     <p class="msg">2023년 화이팅 하자 재현아!!</p>
     <div class="row flex-row wrap">
-        <div class="bucket img1 center">내년에 소현이 많이 만나기</div>
+        <div class="bucket img1 center">부모님께 효도 많이하기</div>
         <div class="bucket img2 center">프론트엔드 공부 하기</div>
         <div class="bucket img2 center">컴퓨터 공학부 학회장 일 잘하기</div>
         <div class="bucket img1 center">운동 열심히 하기</div>
